avoid table wrapping

--- a/web/ui/splitter.css
+++ b/web/ui/splitter.css
@@ -2,6 +2,10 @@ table {
 	margin-top: 20px;
 }
 
+#container {
+	white-space: nowrap;
+}
+
 #srccont, #dstcont, #mskcont {
 	display: inline-block;
 	vertical-align: top;
